Update image source for Jilbab Premium

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="produk-container">
     <div class="produk">
-      <img src="https://i.ibb.co/wy4Pw8z/jilbab.jpg" alt="Jilbab Premium">
+      <img src="https://share.google/quoywkgYyy3lCC1jy" alt="Jilbab Premium">
       <h3>Jilbab Premium</h3>
       <p>Rp75.000</p>
       <a href="produk1.html">Lihat Detail</a>
