Update image source for Jilbab Premium

--- a/produk1.html
+++ b/produk1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <h2>🧕 🧕 Jilbab Premium</h2>
-  <img src="https://i.ibb.co/wy4Pw8z/jilbab.jpg" alt="🧕 Jilbab Premium" />
+  <img src="https://share.google/quoywkgYyy3lCC1jy" alt="🧕 Jilbab Premium" />
   <p>Jilbab bahan voal premium, adem, dan nyaman dipakai harian.</p>
   <p><b>Harga:</b> Rp75.000</p>
   <a href="https://wa.me/6281234567890?text=Halo%20Aii%20Shop,%20saya%20mau%20pesan%20🧕%20Jilbab%20Premium">Beli Sekarang</a><br><br>
